feat: Enhanced Format Conversion (Enhancement C)
- Added markdown, weasyprint, python-docx dependencies
- Enhanced PDF conversion with better styling and page layout
- Enhanced DOCX conversion with better formatting (headings, lists, tables, code)
- Improved HTML styling with modern CSS
- Updated coordinator to convert to HTML, PDF, DOCX by default
- Added fallback to HTML-only if PDF/DOCX fail
- Enhanced tests for all format conversions
- Better error handling and graceful degradation

Features:
- Professional PDF output with page headers/footers
- Well-formatted DOCX with proper styles
- Modern HTML with responsive design
- All formats support tables, code blocks, lists

This makes the documentation production-ready in multiple formats!

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ dependencies = [
     "diskcache>=5.6.3",
     "textstat>=0.7.3",
     "python-dotenv>=1.0.0",
+    "markdown>=3.5.0",
+    "weasyprint>=60.0",
+    "python-docx>=1.1.0",
 ]
 
 [project.optional-dependencies]
