--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,13 +18,16 @@ dependencies = [
     "markdown>=3.5.0",
     "weasyprint>=60.0",
     "python-docx>=1.1.0",
+    "fastapi>=0.100.0",
+    "uvicorn>=0.23.0",
+    "jinja2>=3.1.2",
+    "pydantic>=2.0.0",
 ]
 
 [project.optional-dependencies]
 full = [
     "pyautogen>=0.2.0",
     "langchain>=0.1.0",
-    "jinja2>=3.1.2",
 ]
 openai = [
     "openai>=1.0.0",
