--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,7 @@ OLLAMA_DEFAULT_MODEL=dolphin3
 # Ollama API base URL
 OLLAMA_BASE_URL=http://localhost:11434
 OLLAMA_MAX_TOKENS=8192
+# OLLAMA_MAX_TOKENS=16384
 
 
 # -----------------------------------------------------------------------------
