docs: Add comprehensive local model optimization guide
- Document three optimization strategies: upgrade model, enable auto-fix, hybrid mode
- Provide step-by-step implementation instructions
- Include performance comparisons and configuration recommendations
- Add troubleshooting guide for common issues
- Explain why local models have lower quality and how to improve it

This guide helps users understand:
- Why local models (mixtral, dolphin3) have lower quality than cloud models (Gemini)
- How to upgrade from dolphin3 to mixtral for better quality
- How to enable auto-fix loop for iterative improvement
- How to use hybrid mode for best quality/cost balance
- Recommended configurations for different scenarios

--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,7 @@ Thumbs.db
 !OLLAMA_TIMEOUT_FIX.md
 !OLLAMA_500_ERROR_FIX.md
 !AUTO_FIX_LOOP_GUIDE.md
+!LOCAL_MODEL_OPTIMIZATION.md
 
 
 # Documentation files (organized in docs/)
