--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ dependencies = [
     "jinja2>=3.1.2",
     "pydantic>=2.0.0",
     "requests>=2.31.0",
+    "aiohttp>=3.9.0",  # For async HTTP requests (Ollama, etc.)
+    "httpx>=0.25.0",  # Alternative async HTTP client
 ]
 
 [project.optional-dependencies]
