docs: add improvement roadmap and test prompt
Add comprehensive improvement roadmap and high-quality test prompt

Files:
- IMPROVEMENT_ROADMAP.md: Complete implementation plan for all improvements
- TEST_PROMPT.md: High-quality test prompt for restaurant booking system
- .gitignore: Update to allow documentation files

Improvement roadmap includes:
- Phase 1: Backend core improvements (status management, async integration, DAG)
- Phase 2: WebSocket and real-time communication
- Phase 3: Frontend modernization (Tailwind CSS, document hierarchy, preview)
- Phase 4: API enhancements

Test prompt designed to trigger:
- L1 (Strategic) Agents: Business model, compliance, charter
- L2 (Product) Agents: User stories, PM documentation
- L3 (Technical) Agents: API, database, technical docs
- Cross-Level Agents: User docs, support, developer docs

This provides a clear path forward for all improvements and a comprehensive test case.

--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,9 @@ Thumbs.db
 # Markdown files in root (except README)
 *.md
 !README.md
+!IMPROVEMENT_ROADMAP.md
+!TEST_PROMPT.md
+!CHANGELOG.md
 
 
 # Documentation files (organized in docs/)
