chore: Update .gitignore to allow important documentation files

--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,19 @@ Thumbs.db
 *.md
 !README.md
 !README_BACKEND.md
+!BACKEND.md
+!FRONTEND.md
+!SECURITY.md
+!MAINTENANCE.md
+!PRODUCTION_SETUP.md
+!ORACLE_CLOUD_DEPLOYMENT.md
+!DEPLOYMENT_CHECKLIST.md
+!DEPLOYMENT_STRATEGY.md
+!DOCS_INDEX.md
+!UI_IMPROVEMENTS.md
+!IMPROVEMENTS.md
+!DOCUMENT_DEPENDENCIES.md
+!README_PRODUCTION.md
 !README_PRODUCTION.md
 !PRODUCTION_SETUP.md
 !DOCS_INDEX.md
