feat: Configure Upstash Redis for production deployment
- Updated deploy script to use Upstash (managed Redis) instead of local Redis
- Removed Redis installation from deployment script (saves memory on Oracle Cloud)
- Added comprehensive Upstash setup guide (UPSTASH_SETUP.md)
- Updated systemd services to remove Redis dependency
- Auto-builds Redis URL from REST URL and token

Production Upstash configuration:
- REST URL: https://right-loon-30051.upstash.io
- REST Token: AXVjAAIncDJlNDY0OGUwNzdkMjc0M2U5OGE2Yzg4ZGUzYWU3YWVlZXAyMzAwNTE
- Redis URL: redis://default:token@right-loon-30051.upstash.io:6379

Benefits:
- Saves memory on Oracle Cloud Free Tier (no local Redis needed)
- Free managed Redis with 10,000 commands/day
- Automatic scaling and global edge network
- Better for production scalability

Architecture now fully serverless:
- Frontend: Vercel
- Backend: Oracle Cloud
- Database: Neon (PostgreSQL)
- Cache/Queue: Upstash (Redis)

--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,7 @@ Thumbs.db
 !DOCUMENT_DEPENDENCIES.md
 !PRODUCTION_DOMAIN.md
 !VERCEL_DEPLOYMENT.md
+!UPSTASH_SETUP.md
 
 # Documentation files in docs/ (allow QUALITY_SCORING.md)
 docs/*.md
