feat: Add Docker container deployment support
- Created Dockerfile for backend API
- Created Dockerfile.celery for Celery worker
- Created .dockerignore to exclude unnecessary files
- Created docker-compose.yml for local development/testing
- Created GitHub Actions workflow for automatic container build and deploy
- Created AZURE_CONTAINER_DEPLOYMENT.md with detailed container setup guide
- Updated AZURE_DEPLOYMENT.md with container deployment steps

Container Features:
- Multi-stage build for smaller image size
- Non-root user for security
- Health check included
- Optimized for production
- Same price as Code deployment

Local Testing:
- docker-compose.yml for easy local testing
- Test exact production environment locally

GitHub Actions:
- Automatic build and push to Azure Container Registry
- Automatic deployment to Azure App Service
- Supports both backend and Celery worker images

--- a/.gitignore
+++ b/.gitignore
@@ -88,6 +88,7 @@ Thumbs.db
 !AZURE_DEPLOYMENT.md
 !AZURE_FREE_TIER_SETUP.md
 !DEPLOYMENT_OPTIONS.md
+!AZURE_CONTAINER_DEPLOYMENT.md
 
 # Documentation files in docs/ (allow QUALITY_SCORING.md)
 docs/*.md
