chore: Add gunicorn dependency for container deployment
- Added gunicorn>=21.2.0 to requirements.txt
- Added gunicorn>=21.2.0 to pyproject.toml
- Required for Dockerfile production server

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "python-docx>=1.1.0",
     "fastapi>=0.100.0",
     "uvicorn>=0.23.0",
+    "gunicorn>=21.2.0",  # Production WSGI server
     "jinja2>=3.1.2",
     "pydantic>=2.0.0",
     "requests>=2.31.0",
