--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ python-docx>=1.1.0
 # Web interface
 fastapi>=0.100.0
 uvicorn>=0.23.0
+gunicorn>=21.2.0  # Production WSGI server
 pydantic>=2.0.0
 
 # Templates
