docs: Add Railway domain quick setup guide in Chinese
- Created RAILWAY_DOMAIN_QUICK_SETUP.md with step-by-step instructions
- Explains how to get DNS values from Railway first
- Shows how to configure CNAME or A record in Hostinger
- Clarifies what to put in 'Points to' field (NOT api.omnidoc.info, but Railway's target)
- Includes troubleshooting and verification steps

--- a/.gitignore
+++ b/.gitignore
@@ -84,6 +84,7 @@ Thumbs.db
 !CODE_IMPROVEMENTS.md
 !RAILWAY_DEPLOYMENT.md
 !RAILWAY_SETUP_STEPS.md
+!RAILWAY_DOMAIN_QUICK_SETUP.md
 !CUSTOM_DOMAIN_SETUP.md
 !DOMAIN_ARCHITECTURE.md
 !HOSTINGER_DNS_SETUP.md
