fix: resolve critical issues in document generation workflow and optimize logging
Major fixes:
- Fix database connection pool exhaustion in ContextManager methods
  - Add finally blocks to ensure connections are always released
  - Prevent connection leaks in save_agent_output, update_project_status, etc.
- Fix DailyLimitManager deadlock issue
  - Add lock_held parameter to _cleanup_old_entries to prevent nested lock acquisition
- Fix UnboundLocalError in API endpoints
  - Fix get_project_documents and get_single_document context_manager access
  - Use local variable to avoid variable shadowing issues
- Fix document download functionality
  - Improve content retrieval from database with proper fallback
  - Fix filename sanitization and Content-Disposition headers
  - Update frontend download handler to use anchor element
- Fix results["files"] data structure mismatch
  - Store dictionary instead of string in coordinator results

Logging improvements:
- Consolidate logs to logs/ directory
- Simplify log output, keep only essential information
- Remove verbose debug logs (emoji-marked detailed logs)
- Update all scripts to use new log paths

Code cleanup:
- Remove obsolete deployment documentation files
- Remove temporary markdown documentation files
- Update .gitignore to preserve important documentation
- Add logs/.gitkeep and utility scripts to version control

Files changed: 19 files, +852 insertions, -1676 deletions

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,9 @@ cache/
 *.tmp
 *.bak
 *.log
+!logs/.gitkeep
+logs/*.log
+logs/*.pid
 .pytest_cache/
 htmlcov/
 .coverage
@@ -61,9 +64,12 @@ coverage.xml
 .DS_Store
 Thumbs.db
 
-# Markdown files (except README.md, .github/copilot-instructions.md, and troubleshooting guides)
+# Markdown files (except important documentation)
 *.md
 !README.md
 !/.github/copilot-instructions.md
 !CELERY_WORKER_TROUBLESHOOTING.md
+!CHANGES_SUMMARY.md
+!DEPLOYMENT_CHECKLIST.md
+!COMMIT_MESSAGE.md
 docs/*.md
