feat: add database fallback for Celery when Redis is unavailable
- Automatically fallback to PostgreSQL database broker/backend when Redis is unavailable
- Requires SQLAlchemy (added to dependencies)
- Database broker is slower than Redis but ensures background tasks continue
- Gracefully handles Redis limit errors by switching to database
- Worker continues to work even when Redis limit is exceeded

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "psycopg2-binary>=2.9.0", # PostgreSQL adapter
     "celery>=5.3.0", # Task queue
     "redis>=5.0.0", # Redis for Celery broker and caching
+    "sqlalchemy>=2.0.0", # Database broker fallback for Celery (when Redis unavailable)
     "passlib[bcrypt]>=1.7.4", # Password hashing
     "python-jose[cryptography]>=3.3.0", # JWT tokens
     "slowapi>=0.1.9", # Rate limiting for FastAPI
